<resources>
    <string name="app_name">Scripture App</string>
    <string name="edit_book">Enter book</string>
    <string name="edit_chapter">Enter chapter</string>
    <string name="edit_verse">Enter verse (s)</string>
    <string name="buttonSend">Go!</string>
    <string name="display_scripture">My favorite scripture is</string>
    <string name="save_button">SAVE</string>
    <string name="load_button">LOAD</string>
</resources>
